# kubernetes-stubs

./: .gitmodules  Readme.md  pyproject.toml
codegen/: __main__.py
codegen/base/kubernetes-stubs/: watch.pyi
kubernetes-stubs/: __init__.pyi
kubernetes-stubs/client/: __init__.pyi  configuration.pyi  exceptions.pyi
kubernetes-stubs/client/api/: WellKnown_api.pyi  __init__.pyi  admissionregistration_api.pyi  admissionregistration_v1_api.pyi  admissionregistration_v1alpha1_api.pyi  admissionregistration_v1beta1_api.pyi  apiextensions_api.pyi  apiextensions_v1_api.pyi  apiregistration_api.pyi  apiregistration_v1_api.pyi  apis_api.pyi  apps_api.pyi  apps_v1_api.pyi  authentication_api.pyi  authentication_v1_api.pyi  authentication_v1alpha1_api.pyi  authentication_v1beta1_api.pyi  authorization_api.pyi  authorization_v1_api.pyi  autoscaling_api.pyi  autoscaling_v1_api.pyi  autoscaling_v2_api.pyi  autoscaling_v2beta1_api.pyi  autoscaling_v2beta2_api.pyi  batch_api.pyi  batch_v1_api.pyi  batch_v1beta1_api.pyi  certificates_api.pyi  certificates_v1_api.pyi  certificates_v1alpha1_api.pyi  certificates_v1beta1_api.pyi  coordination_api.pyi  coordination_v1_api.pyi  coordination_v1alpha1_api.pyi  coordination_v1alpha2_api.pyi  coordination_v1beta1_api.pyi  core_api.pyi  core_v1_api.pyi  custom_objects_api.pyi  discovery_api.pyi  (+43 more)
kubernetes-stubs/client/models/: __init__.pyi  (+904 more)
kubernetes-stubs/config/: __init__.pyi  kube_config.pyi
kubernetes-stubs/stream/: __init__.pyi  stream.pyi  ws_client.pyi
kubernetes-stubs/watch/: watch.pyi
kubernetes_ext/: __init__.py
