[project]
name = "kubernetes-stubs"
version = "30.1.0"
description = "Type stubs for the Kubernetes Python API client"
authors = [{ name = "Kialo", email = "sre@kialo.com" }]
license = { file = "LICENSE.md" }
readme = "Readme.md"
dependencies = ["inflection == 0.5.1", "ruff == 0.6.9"]
requires-python = ">=3.12"

[tool.setuptools]
packages = ["kubernetes-stubs", "kubernetes_ext"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

