[project]
name = "kubernetes-stubs"
version = "32.0.1"
description = "Type stubs for the Kubernetes Python API client"
authors = [{ name = "Kialo", email = "sre@kialo.com" }]
readme = "Readme.md"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kubernetes-stubs"]

[tool.uv]
dev-dependencies = ["inflection", "ruff"]
